# mget-downloader

./: Cargo.toml  LICENSE  README.md  ashraful.dev  blog.ashraful.dev
.github/workflows/: release.yml  tests.yml
src/: main.rs  utils.rs
