[package]
name = "rwget"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
indicatif = { version = "0.18.0", features = ["tokio"] }
reqwest = { version = "0.12.23", features = ["stream"] }
tokio = { version = "1.47.1", features = ["full"] }
